--- a/app/src/main/res/layout/activity_voucher.xml
+++ b/app/src/main/res/layout/activity_voucher.xml
@@ -14,7 +14,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
         android:gravity="center"
-        android:text="Booking successfully completed"
+        android:text="@string/bookingSuccessfull"
         android:textSize="18sp" />
 
     <android.support.v7.widget.CardView
@@ -37,7 +37,7 @@
                 android:background="@drawable/border"
                 android:gravity="center"
                 android:textSize="30dp"
-                tools:text="DESCRIPTION" />
+                tools:text="@string/description" />
 
             <TextView
                 android:id="@+id/text_description"
@@ -46,7 +46,7 @@
                 android:layout_marginTop="10dp"
                 android:layout_marginLeft="10dp"
                 android:gravity="left"
-                tools:text="NAME" />
+                tools:text="@string/userName" />
 
             <TextView
                 android:id="@+id/text_name"
@@ -55,7 +55,7 @@
                 android:layout_marginTop="10dp"
                 android:layout_marginLeft="10dp"
                 android:gravity="left"
-                tools:text="NAME" />
+                tools:text="@string/userName" />
 
             <TextView
                 android:id="@+id/text_date"
