--- a/app/src/main/res/layout/full_offer_item.xml
+++ b/app/src/main/res/layout/full_offer_item.xml
@@ -15,7 +15,7 @@
         android:gravity="center"
         android:padding="10dp"
         android:textSize="24sp"
-        tools:text="TITLE" />
+        tools:text="@string/optionTitle" />
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -28,7 +28,7 @@
             android:gravity="left"
             android:textSize="16sp"
             android:layout_weight="1"
-            android:text="Duration" />
+            android:text="@string/optionDuration" />
 
         <TextView
             android:id="@+id/offer_duration"
@@ -51,7 +51,7 @@
             android:layout_weight="1"
             android:gravity="left"
             android:textSize="16sp"
-            android:text="Start time" />
+            android:text="@string/startTime" />
 
         <TextView
             android:id="@+id/offer_start"
@@ -76,7 +76,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@color/accent"
-        android:text="Chose this option"
+        android:text="@string/btnChoseOption"
         android:textColor="@android:color/white"
         android:textSize="24sp" />
 </LinearLayout>
