--- a/app/src/main/res/layout/view_toolbar.xml
+++ b/app/src/main/res/layout/view_toolbar.xml
@@ -4,8 +4,7 @@
     android:id="@+id/toolbar_wrapper"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@color/primary"
-    android:elevation="4dp">
+    android:background="@color/primary">
 
     <android.support.v7.widget.Toolbar
         android:id="@+id/toolbar"
