--- a/app/src/main/res/layout/activity_dive_place.xml
+++ b/app/src/main/res/layout/activity_dive_place.xml
@@ -125,12 +125,13 @@
                 android:text="@string/sealifePlace"
                 android:textSize="26sp" />
 
-            <LinearLayout
-                android:id="@+id/sealife_icons"
+            <GridView
+                android:id="@+id/usage_example_gridview"
+                xmlns:android="http://schemas.android.com/apk/res/android"
                 android:layout_width="match_parent"
-                android:layout_height="50dp"
-                android:layout_margin="10dp"
-                android:orientation="horizontal" />
+                android:layout_height="wrap_content"
+                android:numColumns="5"
+                android:clickable="false" />
 
             <View
                 android:layout_width="match_parent"
