--- a/app/src/main/res/layout/activity_city.xml
+++ b/app/src/main/res/layout/activity_city.xml
@@ -1,7 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_height="match_parent"
+    android:orientation="vertical">
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/tools"
-    xmlns:auto="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
@@ -11,6 +16,7 @@
     <android.support.design.widget.TabLayout
         android:id="@+id/place_sliding_tabs"
         android:layout_width="match_parent"
+        style="@style/tabLayout"
         android:layout_height="wrap_content"
         android:background="@color/primary"
         app:tabMode="scrollable" />
@@ -19,6 +25,18 @@
         android:id="@+id/place_view_pager"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
-
-
 </LinearLayout>
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/filterButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentRight="true"
+        app:elevation="2dp"
+        android:layout_margin="20dp"
+        android:src="@drawable/ic_filter"
+        app:backgroundTint="@color/orange"
+        app:pressedTranslationZ="12dp"/>
+
+
+</RelativeLayout>
