--- a/app/src/main/res/layout/activity_dive_place.xml
+++ b/app/src/main/res/layout/activity_dive_place.xml
@@ -6,9 +6,11 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
-    <include layout="@layout/view_toolbar" />
+    <include layout="@layout/view_toolbar"
+        android:id="@+id/transparent_toolbar" />
 
     <ScrollView
+        android:layout_below="@+id/transparent_toolbar"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
@@ -19,12 +21,13 @@
 
             <RelativeLayout
                 android:layout_width="match_parent"
-                android:layout_height="300dp">
+                android:layout_height="202dp">
 
                 <android.support.v4.view.ViewPager
                     android:id="@+id/product_images"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent" />
+                    android:layout_width="360dp"
+                    android:layout_height="202dp"
+                    />
 
                 <LinearLayout
                     android:id="@+id/stars"
@@ -33,25 +36,11 @@
                     android:layout_alignParentBottom="true"
                     android:orientation="horizontal" />
 
-                <TextView
-                    android:id="@+id/reviews_count"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_alignParentBottom="true"
-                    android:textColor="@android:color/white"
-                    android:textSize="16sp"
-                    android:layout_toRightOf="@+id/stars" />
-
-                <TextView
-                    android:id="@+id/price"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_alignParentBottom="true"
-                    android:textColor="@android:color/white"
-                    android:textSize="16sp"
-                    android:layout_alignParentRight="true" />
             </RelativeLayout>
-
+            <ListView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+            </ListView>
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
