--- a/app/src/main/res/layout/info_window.xml
+++ b/app/src/main/res/layout/info_window.xml
@@ -1,43 +1,75 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="wrap_content"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:orientation="vertical" android:layout_width="175dp"
     android:layout_height="wrap_content"
-    android:background="@color/accent">
+    android:background="@color/white">
+    <ImageView
+        android:id="@+id/popup_photo"
+        android:layout_height="80dp"
+        android:layout_width="175dp"
+        android:src="@drawable/photo"/>
     <TextView
-        android:id="@+id/markerTitle"
-        android:layout_width="wrap_content"
+        android:id="@+id/popup_product_name"
+        android:layout_width="175dp"
         android:layout_height="wrap_content"
-        android:textSize="13sp"
-        android:textColor="@android:color/white"
-        android:padding="10dp"/>
+        android:layout_marginTop="60dp"
+        android:layout_marginLeft="10dp"
+        android:textSize="18sp"
+        android:textColor="#ffffff"
+        android:text="Rock Back"/>
     <TextView
-        android:id="@+id/textView2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/rating"
-        android:textSize="13sp"
-        android:textColor="@android:color/white"
-        android:padding="10dp"/>
-    <LinearLayout
-        android:id="@+id/stars"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:layout_alignParentRight="true"
-        android:layout_alignTop="@+id/textView2"
-        android:layout_alignBottom="@+id/textView2"
-        android:layout_toRightOf="@+id/textView2"
-        android:gravity="right|center"
-        android:paddingRight="10dp">
+        android:id="@+id/description_popup"
+        android:layout_width="165dp"
+        android:layout_height="50dp"
+        android:layout_below="@+id/popup_photo"
+        android:textSize="12sp"
+        android:textColor="@color/black_text"
+        android:padding="5dp"
+        android:layout_marginLeft="5dp"/>
+        <LinearLayout
+            android:id="@+id/pricing"
+            android:layout_width="70dp"
+            android:layout_height="20dp"
+            android:layout_marginTop="5dp"
+            android:background="@color/money_background"
+            android:layout_below="@+id/description_popup">
+            <LinearLayout
+                android:layout_marginLeft="10dp"
+                android:layout_width="60dp"
+                android:layout_gravity="center_vertical|center_horizontal"
+                android:layout_height="wrap_content">
+            <ImageView
+                android:layout_marginTop="1dp"
+                android:layout_width="12dp"
+                android:layout_height="12dp"
+                android:src="@drawable/ic_money"
+                />
+            <TextView
+                android:id="@+id/price1"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textColor="@color/black_text"
+                android:layout_marginLeft="3dp"
+                android:textSize="12dp" />
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textColor="@color/black_text"
+                    android:layout_marginLeft="1dp"
+                    android:textSize="12dp"
+                    android:text="$"/>
+                </LinearLayout>
 
     </LinearLayout>
-    <TextView
-        android:id="@+id/price1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/from"
-        android:text="@string/from"
-        android:textSize="13sp"
-        android:textColor="@android:color/white"
-        android:padding="10dp"/>
-</LinearLayout>
+    <LinearLayout
+        android:layout_toRightOf="@+id/pricing"
+        android:layout_below="@+id/description_popup"
+        android:layout_marginTop="5dp"
+        android:id="@+id/stars"
+        android:background="#696969"
+        android:layout_width="105dp"
+        android:layout_height="20dp"
+        android:orientation="horizontal"
+        >
+    </LinearLayout>
+</RelativeLayout>
