--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,9 +3,9 @@
 <resources>
 
     <!--Green-->
-    <color name="primary">#2196F3</color>
+    <color name="primary">#303f9f</color>
     <color name="secondary">#1565C0</color>
-    <color name="primary_dark">#388E3C</color>
+    <color name="primary_dark">#26348f</color>
     <color name="primary_light">#C8E6C9</color>
 
     <color name="green_100">#C8E6C9</color>
@@ -20,6 +20,10 @@
     <color name="amber_700">#FFA000</color>
     <color name="amber_800">#FF8F00</color>
     <color name="amber_900">#FF6F00</color>
+
+    <!--Tabs-->
+    <color name="orange">#ffcc00</color>
+    <color name="gray">#a3a3a3</color>
 
     <color name="primary_text">#212121</color>
     <color name="blue_grey_700">#455A64</color>
@@ -42,5 +46,10 @@
 
     <color name="shuffle_item_text">#616161</color>
     <color name="tab_selected_strip">@color/accent</color>
+
+    <color name="money_background">#f6f6f6</color>
+    <color name="black_text">#202020</color>
+
+    <color name="white">#FFFFFF</color>
 
 </resources>
