--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -4,7 +4,7 @@
     <style name="AppTheme" parent="Theme.AppCompat.Light.NoActionBar">
         <!-- Customize your theme here. -->
         <item name="windowActionBar">false</item>
-        <item name="colorAccent">@color/accent</item>
+        <item name="colorAccent">@color/orange</item>
         <item name="drawerArrowStyle">@style/DrawerArrowStyle</item>
     </style>
 
@@ -28,6 +28,17 @@
         <item name="android:textColorPrimary">#fff</item>
         <item name="colorControlNormal">@android:color/white</item>
         <item name="colorControlHighlight">#3fff</item>
+    </style>
+
+    <style name="tabLayout" parent="Widget.Design.TabLayout">
+        <item name="tabSelectedTextColor">@color/orange</item>
+        <item name="tabIndicatorColor">@color/orange</item>
+        <item name="tabTextAppearance">@style/customTabText</item>
+    </style>
+
+    <style name="customTabText">
+        <item name="android:textSize">14dp</item>
+        <item name="android:textColor">@color/gray</item>
     </style>
 
 </resources>
