+ progress bar animation to the splash screen

--- a/trunk/android-app/app/src/main/res/layout/activity_splash.xml
+++ b/trunk/android-app/app/src/main/res/layout/activity_splash.xml
@@ -3,8 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <ImageView
-        android:src="@drawable/loading2"
+    <travel.ilave.deepdivescanner.ui.views.DDProgressBarView
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
