--- a/trunk/android-app/app/src/main/res/layout/info_window.xml
+++ b/trunk/android-app/app/src/main/res/layout/info_window.xml
@@ -1,8 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="175dp"
-    android:layout_height="wrap_content"
-    android:background="@color/white">
+    android:layout_height="wrap_content" >
     <ImageView
         android:id="@+id/popup_photo"
         android:layout_height="80dp"
@@ -12,32 +11,38 @@
         android:id="@+id/popup_product_name"
         android:layout_width="175dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="60dp"
+        android:layout_marginTop="55dp"
         android:layout_marginLeft="10dp"
         android:textSize="18sp"
         android:textColor="#ffffff"
         android:text="Rock Back"/>
-    <TextView
-        android:id="@+id/description_popup"
-        android:layout_width="165dp"
-        android:layout_height="50dp"
+    <LinearLayout
+        android:id="@+id/descr"
+        android:background="@color/white"
+        android:layout_width="175dp"
         android:layout_below="@+id/popup_photo"
-        android:textSize="12sp"
-        android:textColor="@color/black_text"
-        android:padding="5dp"
-        android:layout_marginLeft="5dp"/>
+        android:layout_height="60dp">
+        <TextView
+            android:id="@+id/description_popup"
+            android:layout_width="165dp"
+            android:layout_height="53dp"
+            android:layout_below="@+id/popup_photo"
+            android:textSize="12sp"
+            android:textColor="@color/black_text"
+            android:padding="5dp"
+            android:layout_marginLeft="5dp"/>
+    </LinearLayout>
+    <LinearLayout
+        android:id="@+id/pricing"
+        android:layout_width="70dp"
+        android:layout_height="20dp"
+        android:background="@color/money_background"
+        android:layout_below="@+id/descr">
         <LinearLayout
-            android:id="@+id/pricing"
-            android:layout_width="70dp"
-            android:layout_height="20dp"
-            android:layout_marginTop="5dp"
-            android:background="@color/money_background"
-            android:layout_below="@+id/description_popup">
-            <LinearLayout
-                android:layout_marginLeft="10dp"
-                android:layout_width="60dp"
-                android:layout_gravity="center_vertical|center_horizontal"
-                android:layout_height="wrap_content">
+            android:layout_width="match_parent"
+            android:layout_gravity="center_vertical"
+            android:gravity="center_horizontal"
+            android:layout_height="wrap_content">
             <ImageView
                 android:layout_marginTop="1dp"
                 android:layout_width="12dp"
@@ -51,22 +56,20 @@
                 android:textColor="@color/black_text"
                 android:layout_marginLeft="3dp"
                 android:textSize="12dp" />
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:textColor="@color/black_text"
-                    android:layout_marginLeft="1dp"
-                    android:textSize="12dp"
-                    android:text="$"/>
-                </LinearLayout>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textColor="@color/black_text"
+                android:layout_marginLeft="1dp"
+                android:textSize="12dp"
+                android:text="$"/>
+        </LinearLayout>
 
     </LinearLayout>
     <LinearLayout
         android:layout_toRightOf="@+id/pricing"
-        android:layout_below="@+id/description_popup"
-        android:layout_marginTop="5dp"
+        android:layout_below="@+id/descr"
         android:id="@+id/stars"
-        android:background="#696969"
         android:layout_width="105dp"
         android:layout_height="20dp"
         android:orientation="horizontal"
