--- a/trunk/android-app/app/src/main/res/layout/info_window.xml
+++ b/trunk/android-app/app/src/main/res/layout/info_window.xml
@@ -1,41 +1,43 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="175dp"
+    android:orientation="vertical" android:layout_width="260dp"
     android:layout_height="wrap_content" >
     <ImageView
         android:id="@+id/popup_photo"
-        android:layout_height="80dp"
-        android:layout_width="175dp"
+        android:layout_height="120dp"
+        android:layout_width="260dp"
         android:src="@drawable/photo"/>
     <TextView
         android:id="@+id/popup_product_name"
         android:layout_width="175dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="55dp"
+        android:layout_marginTop="90dp"
         android:layout_marginLeft="10dp"
-        android:textSize="18sp"
-        android:textColor="#ffffff"
+        android:textSize="22sp"
+        android:textColor="@color/white"
         android:text="Rock Back"/>
     <LinearLayout
         android:id="@+id/descr"
         android:background="@color/white"
-        android:layout_width="175dp"
+        android:layout_width="260dp"
         android:layout_below="@+id/popup_photo"
-        android:layout_height="60dp">
+        android:layout_height="71dp">
         <TextView
             android:id="@+id/description_popup"
-            android:layout_width="165dp"
-            android:layout_height="53dp"
+            android:layout_width="240dp"
+            android:layout_height="54dp"
             android:layout_below="@+id/popup_photo"
-            android:textSize="12sp"
+            android:textSize="14sp"
             android:textColor="@color/black_text"
-            android:padding="5dp"
-            android:layout_marginLeft="5dp"/>
+            android:layout_marginTop="10dp"
+            android:layout_marginLeft="10dp"
+            android:layout_marginBottom="10dp"
+            android:layout_marginRight="10dp"/>
     </LinearLayout>
     <LinearLayout
         android:id="@+id/pricing"
-        android:layout_width="70dp"
-        android:layout_height="20dp"
+        android:layout_width="90dp"
+        android:layout_height="30dp"
         android:background="@color/money_background"
         android:layout_below="@+id/descr">
         <LinearLayout
@@ -44,9 +46,10 @@
             android:gravity="center_horizontal"
             android:layout_height="wrap_content">
             <ImageView
-                android:layout_marginTop="1dp"
-                android:layout_width="12dp"
-                android:layout_height="12dp"
+                android:layout_gravity="center_vertical"
+                android:gravity="center_horizontal"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
                 android:src="@drawable/ic_money"
                 />
             <TextView
@@ -55,13 +58,19 @@
                 android:layout_height="wrap_content"
                 android:textColor="@color/black_text"
                 android:layout_marginLeft="3dp"
-                android:textSize="12dp" />
+                android:layout_gravity="center_vertical"
+                android:gravity="center_horizontal"
+                android:textStyle="bold"
+                android:textSize="16dp" />
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textColor="@color/black_text"
+                android:layout_gravity="center_vertical"
+                android:gravity="center_horizontal"
                 android:layout_marginLeft="1dp"
-                android:textSize="12dp"
+                android:textSize="16dp"
+                android:textStyle="bold"
                 android:text="$"/>
         </LinearLayout>
 
@@ -70,8 +79,10 @@
         android:layout_toRightOf="@+id/pricing"
         android:layout_below="@+id/descr"
         android:id="@+id/stars"
-        android:layout_width="105dp"
-        android:layout_height="20dp"
+        android:gravity="center_vertical|center_horizontal"
+        android:layout_width="170dp"
+        android:layout_height="30dp"
+        android:background="@color/white"
         android:orientation="horizontal"
         >
     </LinearLayout>
