--- a/trunk/android-app/app/src/main/res/layout/activity_details.xml
+++ b/trunk/android-app/app/src/main/res/layout/activity_details.xml
@@ -15,14 +15,13 @@
             app:contentScrim="@color/primary"
             app:layout_scrollFlags="scroll|exitUntilCollapsed">
 
-            <ImageView
+            <android.support.v4.view.ViewPager
+                android:id="@+id/product_images"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
+                app:layout_collapseMode="parallax"
                 android:scaleType="centerCrop"
-                android:fitsSystemWindows="true"
-                android:background="@drawable/top_photo"
-                android:id="@+id/profile_id"
-                app:layout_collapseMode="parallax" />
+                />
 
             <android.support.v7.widget.Toolbar
                 android:id="@+id/toolbar_collapse"
