--- a/trunk/android-app/app/src/main/res/layout/activity_error.xml
+++ b/trunk/android-app/app/src/main/res/layout/activity_error.xml
@@ -5,7 +5,13 @@
     <include
         android:id="@+id/include"
         layout="@layout/view_toolbar" />
-
+    <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@drawable/ic_wifi"
+        android:layout_gravity="center_horizontal"
+        android:padding="20dp"
+        android:layout_marginTop="130dp"/>
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -14,7 +20,7 @@
         android:id="@+id/textView3"
         android:layout_gravity="center_horizontal"
         android:textAlignment="center"
-        android:layout_marginTop="160dp"
+        android:textColor="@color/black_text"
         android:padding="10dp"/>
 
     <Button
@@ -22,6 +28,7 @@
         android:layout_height="wrap_content"
         android:text="@string/btnRetry"
         android:id="@+id/btnRefresh"
+        android:background="@color/orange"
         android:layout_gravity="center_horizontal" />
 
 </LinearLayout>
