Request for new api, map markers showimg, subscribe screen

--- a/trunk/android-app/app/src/main/res/layout/product_item.xml
+++ b/trunk/android-app/app/src/main/res/layout/product_item.xml
@@ -35,36 +35,13 @@
         android:text="It s a long established fact that a reader will be distracted by the readable content..."/>
 
     <LinearLayout
-        android:layout_width="82dp"
-        android:background="@color/money_background"
-        android:layout_gravity="center_vertical|center_horizontal"
-        android:layout_marginTop="103dp"
-        android:layout_height="28dp">
-        <ImageView
-            android:layout_gravity="center_vertical"
-            android:layout_width="15dp"
-            android:layout_height="15dp"
-            android:src="@drawable/ic_money"
-            android:layout_marginLeft="16dp"
-            />
-        <TextView
-            android:id="@+id/product_price"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textColor="@color/black_text"
-            android:layout_gravity="center_vertical"
-            android:layout_marginLeft="3dp"
-            android:text="1000"
-            android:textSize="13dp" />
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textColor="@color/black_text"
-            android:layout_marginLeft="1dp"
-            android:textSize="13dp"
-            android:layout_gravity="center_vertical"
-            android:text="$"/>
-    </LinearLayout>
+        android:layout_marginLeft="10dp"
+        android:id="@+id/stars"
+        android:layout_width="wrap_content"
+        android:layout_height="40dp"
+        android:gravity="center_vertical"
+        android:orientation="horizontal">
+        </LinearLayout>
 
     <ImageView
         android:id="@+id/product_logo"
