--- a/trunk/android-app/app/src/main/res/layout/activity_details.xml
+++ b/trunk/android-app/app/src/main/res/layout/activity_details.xml
@@ -15,13 +15,20 @@
             app:contentScrim="@color/primary"
             app:layout_scrollFlags="scroll|exitUntilCollapsed">
 
-            <android.support.v4.view.ViewPager
+           <!-- <android.support.v4.view.ViewPager
                 android:id="@+id/product_images"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 app:layout_collapseMode="parallax"
                 android:scaleType="centerCrop"
                 />
+-->
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/top_photo"
+                app:layout_collapseMode="parallax"
+                android:scaleType="centerCrop"/>
 
             <android.support.v7.widget.Toolbar
                 android:id="@+id/toolbar_collapse"
@@ -48,59 +55,16 @@
         <RelativeLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content">
-            <LinearLayout
-                android:id="@+id/pricing"
-                android:background="@color/money_background"
-                android:layout_width="100dp"
-                android:layout_height="40dp">
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center_vertical"
-                    android:gravity="center_horizontal">
-                    <ImageView
-                        android:layout_gravity="center_vertical"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:src="@drawable/ic_money_small"
-                        />
-                    <TextView
-                        android:id="@+id/price_details"
-                        android:layout_gravity="center_vertical"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:textColor="@color/black_text"
-                        android:layout_marginLeft="3dp"
-                        android:text="30"
-                        android:textSize="16dp"
-                        android:textStyle="bold"/>
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:textColor="@color/black_text"
-                        android:layout_marginLeft="1dp"
-                        android:layout_gravity="center_vertical"
-                        android:textSize="16dp"
-                        android:textStyle="bold"
-                        android:text="$"/>
-                </LinearLayout>
-            </LinearLayout>
+
             <LinearLayout
                 android:layout_marginLeft="10dp"
                 android:id="@+id/stars"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="40dp"
-                android:gravity="center_vertical"
+                android:gravity="center_vertical|center_horizontal"
                 android:orientation="horizontal"
-                android:layout_toRightOf="@+id/pricing"
                 >
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_toRightOf="@id/stars"
-                    android:text="@string/details_reviews"
-                    android:textColor="#9F9F9F"
-                    android:gravity="center_vertical"/>
+
             </LinearLayout>
         </RelativeLayout>
             <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
@@ -134,6 +98,11 @@
                         android:layout_height="wrap_content"
                         android:textSize="12dp"
                         android:text="10 meters" />
+                    <ImageView
+                        android:layout_width="wrap_content"
+                        android:layout_height="match_parent"
+                        android:layout_marginTop="10dp"
+                        android:src="@drawable/divider"/>
                 </LinearLayout>
             </RelativeLayout>
             <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
@@ -166,6 +135,11 @@
                         android:layout_height="wrap_content"
                         android:textSize="12dp"
                         android:text="10 meters" />
+                    <ImageView
+                        android:layout_width="wrap_content"
+                        android:layout_height="match_parent"
+                        android:layout_marginTop="10dp"
+                        android:src="@drawable/divider"/>
                 </LinearLayout>
             </RelativeLayout>
             <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
@@ -198,6 +172,11 @@
                         android:layout_height="wrap_content"
                         android:textSize="12dp"
                         android:text="Strong" />
+                    <ImageView
+                        android:layout_width="wrap_content"
+                        android:layout_height="match_parent"
+                        android:layout_marginTop="10dp"
+                        android:src="@drawable/divider" />
                 </LinearLayout>
             </RelativeLayout>
             <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
@@ -230,6 +209,7 @@
                         android:layout_height="wrap_content"
                         android:textSize="12dp"
                         android:text="High" />
+
                 </LinearLayout>
             </RelativeLayout>
             <TextView
