--- a/trunk/android-app/app/src/main/res/layout/activity_register.xml
+++ b/trunk/android-app/app/src/main/res/layout/activity_register.xml
@@ -40,6 +40,7 @@
 
             <android.support.design.widget.TextInputLayout
                 android:id="@+id/first_name"
+                android:layout_marginTop="5dp"
                 android:layout_width="280dp"
                 android:layout_height="wrap_content">
                 <EditText
@@ -56,7 +57,7 @@
                 android:layout_height="wrap_content">
                 <EditText
                     android:layout_marginLeft="15dp"
-                    android:id="@+id/lastname"
+                    android:id="@+id/sub_lastname"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:hint="@string/subscribe_lastname"/>
@@ -81,6 +82,7 @@
         android:layout_marginTop="10dp"
         android:layout_height="wrap_content">
     <Button
+        android:id="@+id/button_subscribe"
         android:layout_width="295dp"
         android:layout_height="50dp"
         android:textSize="18sp"
