--- a/trunk/android-app/app/src/main/res/layout/activity_splash.xml
+++ b/trunk/android-app/app/src/main/res/layout/activity_splash.xml
@@ -1,10 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
     <travel.ilave.deepdivescanner.ui.views.DDProgressBarView
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:id="@+id/mask_splash"
+        android:layout_height="match_parent"
+        android:background="@drawable/bg_photo"/>
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/mask_splash"
+        android:text="Scanning..."
+        android:textColor="#8DA7B4"
+        android:textSize="30sp" />
 
-</FrameLayout>
+</RelativeLayout>
