--- a/trunk/android-app/app/src/main/res/layout/activity_splash.xml
+++ b/trunk/android-app/app/src/main/res/layout/activity_splash.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -8,12 +8,5 @@
         android:id="@+id/mask_splash"
         android:layout_height="match_parent"
         android:background="@drawable/bg_photo"/>
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/mask_splash"
-        android:text="Scanning..."
-        android:textColor="#8DA7B4"
-        android:textSize="30sp" />
 
-</RelativeLayout>
+</FrameLayout>
