--- a/trunk/android-app/app/src/main/res/layout/activity_social_login.xml
+++ b/trunk/android-app/app/src/main/res/layout/activity_social_login.xml
@@ -25,14 +25,15 @@
         android:layout_marginRight="30dp"
         android:layout_marginLeft="30dp" />
     <com.google.android.gms.common.SignInButton
-        android:layout_width="300dp"
+        android:id="@+id/google_signin_button"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:paddingTop="15dp"
         android:paddingBottom="15dp"
-        android:gravity="center"
         android:layout_gravity="center"
         android:layout_marginRight="30dp"
         android:layout_marginLeft="30dp">
+
 
     </com.google.android.gms.common.SignInButton>
 
