--- a/trunk/android-app/app/src/main/res/layout/dive_center_item.xml
+++ b/trunk/android-app/app/src/main/res/layout/dive_center_item.xml
@@ -8,9 +8,9 @@
     <ImageView
         android:id="@+id/dc_avatar"
         android:layout_width="80dp"
-        android:layout_height="wrap_content"
+        android:layout_height="80dp"
         android:padding="10dp"
-        android:src="@drawable/dc_avatar"/>
+        android:src="@drawable/dc_avatar_empty"/>
     <android.support.v7.widget.AppCompatTextView
         android:layout_marginLeft="10dp"
         android:layout_marginTop="10dp"
@@ -62,7 +62,7 @@
         android:id="@+id/dc_telefon"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:inputType="phone"
+        android:autoLink="phone"
         android:textSize="18sp"
         android:layout_marginLeft="5dp"
         android:textColor="@color/black_text"
