Dive centers markers clustering

--- a/trunk/android-app/app/src/main/res/layout/info_window_divecenter.xml
+++ b/trunk/android-app/app/src/main/res/layout/info_window_divecenter.xml
@@ -45,8 +45,7 @@
             android:layout_below="@+id/stars"
             android:layout_marginTop="10dp"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="78/212 Moo 1, vichit RD. Phuket Town, Phuket"/>
+            android:layout_height="wrap_content" />
         <RelativeLayout
             android:layout_marginTop="10dp"
             android:layout_width="match_parent"
