--- a/trunk/android-app/app/src/main/res/layout/activity_social_login.xml
+++ b/trunk/android-app/app/src/main/res/layout/activity_social_login.xml
@@ -1,67 +1,52 @@
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="@drawable/bg_photo"
-    tools:context=".MainActivity">
+    android:orientation="vertical">
+<RelativeLayout
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
 
-    <include layout="@layout/view_toolbar" />
-
+    >
     <ImageView
-        android:id="@+id/picture"
-        android:src="@drawable/mask"
-        android:layout_gravity="center"
-        android:layout_marginTop="20dp"
-        android:layout_width="200sp"
-        android:layout_height="200sp"/>
+        android:layout_marginTop="100dp"
+        android:layout_width="match_parent"
+        android:layout_height="170dp"
+        android:src="@drawable/login_logo"
+        android:id="@+id/login_logo"/>
+    <TextView
+        android:id="@+id/login_status"
+        android:visibility="gone"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
+        android:textAlignment="center"
+        android:layout_marginTop="20dp" />
 
     <com.facebook.login.widget.LoginButton
-        android:id="@+id/facebook_login_button"
+        android:layout_marginTop="30dp"
+        android:layout_below="@+id/login_logo"
+        android:id="@+id/login_with_facebook"
         android:layout_width="300dp"
-        android:layout_height="wrap_content"
-        android:paddingTop="15dp"
-        android:paddingBottom="15dp"
-        android:gravity="center"
-        android:layout_gravity="center"
-        android:layout_marginRight="30dp"
-        android:layout_marginLeft="30dp" />
+        android:layout_height="match_parent"
+        android:layout_gravity="center_vertical" />
 
     <com.google.android.gms.common.SignInButton
-        android:id="@+id/google_signin_button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:paddingTop="15dp"
-        android:paddingBottom="15dp"
-        android:layout_gravity="center"
-        android:layout_marginRight="30dp"
-        android:layout_marginLeft="30dp"
-        android:visibility="visible"
-        tools:visibility="gone" />
-        <LinearLayout
-            android:id="@+id/sign_out_and_disconnect"
-            android:layout_width="fill_parent"
-            android:layout_height="50dp"
-            android:orientation="horizontal"
-            android:paddingLeft="16dp"
-            android:paddingRight="16dp"
-            android:visibility="gone"
-            tools:visibility="visible">
-
-        <Button
-            android:id="@+id/sign_out_button"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:text="Sign out"
-             />
-        </LinearLayout>
-    <com.twitter.sdk.android.core.identity.TwitterLoginButton
-        android:id="@+id/twitter_login_button"
-        android:layout_gravity="center"
+        android:layout_marginTop="15dp"
+        android:id="@+id/login_with_google"
         android:layout_width="300dp"
-        android:layout_height="wrap_content" />
+        android:layout_below="@id/login_with_facebook"
+        android:layout_height="50dp" />
 
+    <Button
+        android:layout_marginTop="15dp"
+        android:id="@+id/login_with_twitter"
+        android:text="twitter"
+        android:layout_below="@+id/login_with_google"
+        android:layout_width="300dp"
+        android:layout_height="50dp" />
+</RelativeLayout>
 
-
-</LinearLayout>
+</RelativeLayout>
