--- a/trunk/android-app/app/src/main/res/layout/sealife_item.xml
+++ b/trunk/android-app/app/src/main/res/layout/sealife_item.xml
@@ -4,7 +4,7 @@
     android:layout_height="80dp">
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:gravity="center">
     <android.support.v7.widget.AppCompatImageView
         android:id="@+id/seaife_logo"
@@ -15,7 +15,9 @@
         android:id="@+id/sealife_name"
         android:layout_width="80dp"
         android:layout_height="wrap_content"
-        android:text="octopus"
+        android:text="octopus octopus"
+        android:ellipsize="end"
+        android:lines="1"
         android:gravity="center"
         android:layout_below="@+id/seaife_logo"
         android:textColor="@color/black_text"/>
