--- a/trunk/android-app/app/src/main/res/layout/activity_details.xml
+++ b/trunk/android-app/app/src/main/res/layout/activity_details.xml
@@ -15,20 +15,14 @@
             app:contentScrim="@color/primary"
             app:layout_scrollFlags="scroll|exitUntilCollapsed">
 
-           <!-- <android.support.v4.view.ViewPager
+            <android.support.v4.view.ViewPager
                 android:id="@+id/product_images"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 app:layout_collapseMode="parallax"
                 android:scaleType="centerCrop"
                 />
--->
-            <ImageView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:src="@drawable/top_photo"
-                app:layout_collapseMode="parallax"
-                android:scaleType="centerCrop"/>
+
 
             <android.support.v7.widget.Toolbar
                 android:id="@+id/toolbar_collapse"
