--- a/trunk/android-app/app/src/main/res/layout/info_window.xml
+++ b/trunk/android-app/app/src/main/res/layout/info_window.xml
@@ -26,13 +26,15 @@
         <TextView
             android:id="@+id/description_popup"
             android:layout_width="240dp"
-            android:layout_height="54dp"
+            android:layout_height="wrap_content"
             android:layout_below="@+id/popup_photo"
             android:textSize="14sp"
             android:textColor="@color/black_text"
             android:layout_marginTop="10dp"
             android:layout_marginLeft="10dp"
             android:layout_marginBottom="10dp"
+            android:ellipsize="end"
+            android:lines="3"
             android:layout_marginRight="10dp"/>
     </LinearLayout>
 
