--- a/trunk/android-app/app/src/main/res/layout/product_item.xml
+++ b/trunk/android-app/app/src/main/res/layout/product_item.xml
@@ -39,7 +39,8 @@
         android:id="@+id/stars"
         android:layout_width="wrap_content"
         android:layout_height="40dp"
-        android:gravity="center_vertical"
+        android:layout_below="@+id/product_description"
+        android:gravity="center_vertical|center_horizontal"
         android:orientation="horizontal">
         </LinearLayout>
 
