--- a/trunk/android-app/app/src/main/res/layout/activity_social_login.xml
+++ b/trunk/android-app/app/src/main/res/layout/activity_social_login.xml
@@ -43,6 +43,7 @@
     <Button
         android:id="@+id/custom_google"
         android:layout_marginTop="5dp"
+        android:visibility="gone"
         android:layout_below="@+id/fb_custom"
         android:layout_width="wrap_content"
         android:layout_height="65dp"
