--- a/trunk/android-app/app/src/main/res/values/styles.xml
+++ b/trunk/android-app/app/src/main/res/values/styles.xml
@@ -7,12 +7,10 @@
         <item name="colorAccent">@color/orange</item>
         <item name="drawerArrowStyle">@style/DrawerArrowStyle</item>
         <item name="android:radioButtonStyle">@style/RadioButton</item>
-        <item name="android:homeAsUpIndicator">@drawable/ic_actionbar_back</item>
-        <item name="homeAsUpIndicator">@drawable/ic_actionbar_back</item>
     </style>
 
     <style name="RadioButton" parent="@android:style/Widget.CompoundButton.RadioButton">
-        <item name="android:textSize">50dp</item>
+        <item name="android:button">@drawable/radio</item>
     </style>
 
     <style name="editTextSub" parent="Widget.AppCompat.EditText">
